# WhyNotMe

./: CMakeLists.txt  README.md
cmake/: cxx_stand.cmake  function.cmake  gl_deps.cmake  glog.cmake  linux.cmake  short_path.cmake  win.cmake  wxwidgets.cmake
dependence/glog/include/glog/: export.h
dependence/rapidxml/include/: rapidxml_ext.hpp
dependence/wxwidgets/include/mswu/: build.cfg
dependence/wxwidgets/include/mswud/: build.cfg
dependence/wxwidgets/include/mswud/wx/: setup.h
lib/windows/Debug/: common.exp  data_center.exp  gl_helper.exp  middleware.exp
src/: CMakeLists.txt
src/ability/: CMakeLists.txt
src/ability/data_center/: CMakeLists.txt  big_interger_value.cpp  big_interger_value.h  data_center.cpp  data_center.h  data_center_def.cpp  data_center_type.h  data_db.cpp  data_db.h  data_loader.cpp  data_loader.h  data_manager.cpp  data_manager.h  float_value.cpp  float_value.h  interger_value.cpp  interger_value.h  list_value.h  named_data.cpp  named_data.h  object_value.cpp  object_value.h  observer_manager.cpp  observer_manager.h  string_value.cpp  string_value.h  value_util.cpp  value_util.h  value_watcher_guard.h  value_watcher_interface.h
src/ability/data_center/include/: data_center_def.h  data_center_interface.h  data_observer_helper.h  data_observer_interface.h  data_value_interface.h  named_data_interface.h
src/ability/gl_helper/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/WhyNotPlan/: CMakeLists.txt  whynotplan_app.cpp
src/app/WhyNotView/: CMakeLists.txt  global_def.cpp  global_def.h  whynotview_app.cpp  whynotview_app.h
src/app/WhyNotView/util/: datacenter_value_util.h
src/foundation/: CMakeLists.txt
src/foundation/common/: CMakeLists.txt  csv.h  event_dispatcher.cpp  event_dispatcher.h  event_dispatcher_interface.h  file_util.cpp  file_util.h  ini_file.cpp  ini_file.h  localization_manager.h  logger.cpp  logger.h  standard.h  text_util.cpp  text_util.h  timer.cpp  timer.h  util.cpp  util.h  xml_util.cpp  xml_util.h
src/foundation/glad/: CMakeLists.txt
src/foundation/glad/include/glad/: glad.h
src/foundation/glad/src/: glad.c
src/foundation/platform/: CMakeLists.txt
src/foundation/platform/include/: procedure_call_interface.h
src/foundation/platform/windows/: CMakeLists.txt  procedure_call.cpp  procedure_call.h
src/foundation/sqlite/: CMakeLists.txt
src/middleware/: CMakeLists.txt
src/middleware/control/: background.cpp  background.h  background_interface.h  control_res.cpp  control_res.h  gui_import.h  picture.cpp  picture.h  resource_define.h  resource_loader.cpp  resource_loader.h  resource_manager.cpp  resource_manager.h  static_text_ctrl.cpp  static_text_ctrl.h  ui_struct_def.h  ui_util.cpp  ui_util.h
src/sample/: CMakeLists.txt
src/sample/sample_datacenter/: CMakeLists.txt  main.cpp  test_dataloader.cpp  test_dataloader.h
src/sample/sample_glfw/: CMakeLists.txt  demo_util.cpp  demo_util.h  main.cpp  triangle.cpp  triangle.h
src/sample/sample_rapidjson/: CMakeLists.txt  MyClass.h  MyClass3.h  RapidjsonHelper.cpp  RapidjsonHelper.h  main.cpp
src/sample/sample_wxgl/: CMakeLists.txt  app.cpp  app.h  gl_util.cpp  gl_util.h
